CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

IF( EXECUTABLE_OUTPUT_PATH )
	SET( CXX_TEST_PATH ${EXECUTABLE_OUTPUT_PATH} )
ELSE()
	SET( CXX_TEST_PATH . )
ENDIF()

#-----------------------------------------------
#  external libs
#-----------------------------------------------

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )

FIND_PACKAGE( ITK REQUIRED )
INCLUDE( ${ITK_USE_FILE} )

SET( Boost_USE_STATIC_LIBS ON )
SET( Boost_NO_BOOST_CMAKE 1 )
FIND_PACKAGE( Boost 1.49 COMPONENTS system filesystem program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} )
LINK_DIRECTORIES( ${Boost_LIBRARY_DIRS} )

#-----------------------------------------------

SET( EXTERNAL_INCLUDE_DIR "" )
SET( EXTERNAL_INC         "")
ADD_SUBDIRECTORY(External)

ADD_SUBDIRECTORY(NucleiMorphology)

